packages/kit/test/apps/basics/src/routes/errors/handle-error-status/+page.js
/** @type {import('@sveltejs/kit').Load} */
export async function load() {
	throw new Error('Status override test');
}
